# Hello-Tauri

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  vitest.debug.config.ts  vitest.minimal.config.ts
.workbuddy/memory/: 2026-07-18.md  MEMORY.md
data/: employees_10000.csv  mock_10000.csv  sample.txt
data/data/: VERSION.txt  sample.csv  sample.json
docs/: CSV表格与树形详情优化方案.md  decompress-preview-flow.md  design.md  full-pipeline-test.md  getting-started.md  layout-optimization-design.md  业务场景.md  项目问题分析报告.md
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  decompress.rs  error.rs  file_ops.rs  lib.rs  main.rs
src/__tests__/: _minimal.test.ts  memory-cache-storage.ts  setup.test.ts  setup.ts
src/adapters/: tauri-adapter.ts  types.ts  web-adapter.ts
src/composables/: use-archives.ts  use-cache.ts  use-csv-table-tree.ts  use-decompress.ts  use-global-drop.ts  use-panel-layout.ts  use-platform.ts  use-plugins.ts  use-search.ts  use-tabs.ts  use-vfs.ts
src/config/: archive-manifest.ts  index.ts  layout.ts  site.ts
src/core/: archive-utils.ts  cache-fs.ts  cache-idb.ts  cache-manager.ts  cache-storage.ts  csv-row-tree.ts  decompress.ts  file-dispatcher.ts  file-tree.ts  file-validator.ts  format.ts  memory-store.ts  parser-engine.ts  search.ts  task-scheduler.ts  vfs.ts
src/layout/: AppLayout.vue
src/plugins/: helpers.ts  manifest.ts  registry.ts  types.ts
(+313 files in other folders)
